crates/parse/src/grammar/snapshots/mcfunction_parse__grammar__nbt__tests__array_empty.snap
---
source: crates/parse/src/grammar/nbt.rs
expression: "parse_nbt(\"[B;]\")"
---
Group(NbtSequence) at 0:0 - 0:4 {
    Token(LBracket) `[` at 0:0 - 0:1
    Joined(NbtPrefixB) `B` at 0:1 - 0:2
    Token(Semicolon) `;` at 0:2 - 0:3
    Token(RBracket) `]` at 0:3 - 0:4
}

