crates/parse/src/grammar/snapshots/mcfunction_parse__grammar__nbt__tests__boolean_true.snap
---
source: crates/parse/src/grammar/nbt.rs
expression: "parse_nbt(\"true\")"
---
Joined(NbtBoolean) `true` at 0:0 - 0:4

