crates/parse/src/grammar/snapshots/mcfunction_parse__grammar__nbt__tests__compound_empty.snap
---
source: crates/parse/src/grammar/nbt.rs
expression: "parse_nbt(\"{}\")"
---
Group(NbtCompound) at 0:0 - 0:2 {
    Token(LCurly) `{` at 0:0 - 0:1
    Token(RCurly) `}` at 0:1 - 0:2
}

