crates/parse/src/grammar/snapshots/mcfunction_parse__grammar__nbt__tests__compound_nested.snap
---
source: crates/parse/src/grammar/nbt.rs
expression: "parse_nbt(\"{foo:{bar:{baz:\\\"ikr\\\"}}}\")"
---
Group(NbtCompound) at 0:0 - 0:23 {
    Token(LCurly) `{` at 0:0 - 0:1
    Group(NbtCompoundEntry) at 0:1 - 0:22 {
        Joined(UnquotedString) `foo` at 0:1 - 0:4
        Token(Colon) `:` at 0:4 - 0:5
        Group(NbtCompound) at 0:5 - 0:22 {
            Token(LCurly) `{` at 0:5 - 0:6
            Group(NbtCompoundEntry) at 0:6 - 0:21 {
                Joined(UnquotedString) `bar` at 0:6 - 0:9
                Token(Colon) `:` at 0:9 - 0:10
                Group(NbtCompound) at 0:10 - 0:21 {
                    Token(LCurly) `{` at 0:10 - 0:11
                    Group(NbtCompoundEntry) at 0:11 - 0:20 {
                        Joined(UnquotedString) `baz` at 0:11 - 0:14
                        Token(Colon) `:` at 0:14 - 0:15
                        Token(QuotedString) `"ikr"` at 0:15 - 0:20
                    }
                    Token(RCurly) `}` at 0:20 - 0:21
                }
            }
            Token(RCurly) `}` at 0:21 - 0:22
        }
    }
    Token(RCurly) `}` at 0:22 - 0:23
}

