crates/parse/src/grammar/snapshots/mcfunction_parse__grammar__nbt__tests__empty.snap
---
source: crates/parse/src/grammar/nbt.rs
expression: "parse_path(\"\")"
---
Group(NbtPath) at 0:0 - 0:0 {
}

